# tearex

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  cmake-variants.yaml  main.cpp
assets/: teapot.gltf
assets/models/spoon/: scene.gltf
assets/shaders/: basic.frag  basic.vert
src/: app.cpp  app.hpp  application_data.hpp  component_collection.hpp  input_data.hpp  main.cpp  types.hpp
src/components/: camera.hpp  directional_light.hpp  model.hpp  static_model.hpp
src/entries/: gl_main.cpp  vk_main.cpp  windows.cpp
src/systems/: shared_data.hpp  systems.hpp
src/systems/renderer/: renderer.hpp
src/systems/renderer/opengl/: file_loader.cpp  loader.cpp  model_loader.cpp  renderer.cpp  shader_loader.cpp
src/systems/renderer/opengl/loaders/: model_info.hpp  model_loader.cpp  shader.cpp
src/systems/renderer/vulkan/: initialiser.cpp  initialiser.hpp  renderer.cpp  renderer.hpp  shared_data.hpp  terminator.cpp  terminator.hpp
src/systems/renderer/vulkan/util/: extension_functions.cpp  extension_functions.hpp
src/systems/window/: window.hpp
src/systems/window/glfw/: initialiser.cpp  initialiser.hpp  shared_data.hpp  terminator.cpp  terminator.hpp  updater.cpp  updater.hpp  window.cpp  window.hpp
src/systems/window/win32/: message_handler.cpp
src/util/: debug.h  loader.cpp
testbed/: win32_api.cpp
